<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".controller.activity.LoginActivity">

    <ImageView
        android:id="@+id/splash_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <ViewStub-->
    <!--        android:id="@+id/view_stub"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout="@layout/activity_login" />-->

    <EditText
        android:id="@+id/user_password"
        android:password="true"
        android:layout_width="243dp"
        android:layout_height="32dp"
        android:background="@drawable/round_corners_bg"
        android:hint="@string/user_password_input"
        android:paddingStart="20dp"
        android:paddingLeft="5dp"
        android:textSize="10sp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="243dp"
        android:layout_height="32dp"
        android:background="@drawable/round_corners_bg"
        android:hint="@string/user_name_input"
        android:paddingStart="20dp"
        android:paddingLeft="5dp"
        android:textSize="10sp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/notice"
        android:layout_width="296dp"
        android:layout_height="31dp"
        android:text="@string/notice"
        android:textColor="@color/white"
        android:textSize="8dp"

        app:layout_constraintBottom_toBottomOf="@+id/splash_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="243dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@drawable/btn_selector"
        android:text="登录"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_password"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        app:layout_constraintVertical_bias="0.015">

    </Button>

    <TextView
        android:id="@+id/user_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>